Bug 125563 - FILEOPEN PPTX handle values lost or wrong for text transformation
Summary: FILEOPEN PPTX handle values lost or wrong for text transformation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.1.2 release
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: filter:pptx
: 125070 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-28 23:55 UTC by Regina Henschel
Modified: 2019-06-14 11:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example with shape and screenshot (58.04 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-05-28 23:55 UTC, Regina Henschel
Details
How it looks in LibreOffice 6.4 Master (33.67 KB, image/png)
2019-06-14 09:21 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-05-28 23:55:51 UTC
Created attachment 151750 [details]
Example with shape and screenshot

Open attached file. It contains three slides with shapes, where the problem is good visible. But it exists for other shapes too. The adjustments which the user had made to the shapes are lost or imported with wrong values. The problem is good visible for handles, which are moved horizontally. Each slide has an image, how it looks in PowerPoint.

The support for import of text transformation (WortArt, Fontwork) was implemented with bug 116350. The here mentioned problem exists from the beginning. It is no regression.
Comment 1 Xisco Faulí 2019-05-29 08:25:56 UTC
Reproduced in

Version: 6.3.0.0.alpha1+
Build ID: 69b62cfcbd364d7f62142149c2f690104b217ca1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 Regina Henschel 2019-05-29 10:52:42 UTC
It is not inherit from OOo and the error does not occur in LO3.3. Those were not even able to import text transform from pptx at all. And import of the similar shapes from binary format is OK.

The feature has been newly implemented by Szymon Klos in Aug. 2018 in 6.2 and was back-ported to 6.1.1. It is an error in that implementation.
Comment 3 Regina Henschel 2019-06-07 17:01:15 UTC
*** Bug 125070 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2019-06-07 19:54:36 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/95b61f7da41acaabeb0a4bf74749b8fa95ae9966%5E%21

tdf#125563 Adapt adjustment values to binary shape geometry

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2019-06-09 15:19:03 UTC
Fix is in Version: 6.4.0.0.alpha0+ (x64)
Build ID: 87238627b025ee6aa61378667e56b1769d4460c2
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-09_03:04:32
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded
Comment 6 Commit Notification 2019-06-14 09:18:28 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/0aff57b3a4f227c02bfdb4850bb11279325f41db%5E%21

tdf#125563 Adapt adjustment values to binary shape geometry

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-06-14 09:20:53 UTC
Hi Regina,
it looks much better after your commit, however, the text in the first slide is unreadable...
Comment 8 Xisco Faulí 2019-06-14 09:21:19 UTC
Created attachment 152187 [details]
How it looks in LibreOffice 6.4 Master
Comment 9 Regina Henschel 2019-06-14 11:03:50 UTC
Yes, "stretch" is still different from MS Office. That is bug 125573.