tdf#125563 Adapt adjustment values to binary shape geometry

All presetTextWarp shapes are mapped to MS binary WordArt geometry in
current implementation. But they use different reference systems for
coordinates and different unit for angles. So _all_ adjustment values
have to be adapted. Error was, that only angles were treated.
Correct test file to actually contain the claimed 213.25 degree.
Other bugs than adjustment values will be addressed in separate issues.

Change-Id: I719b364af23887e50f003cf9878665755b8989ae